2001-07-17  Ulrich Drepper  <drepper@redhat.com>

	* localealias.c (read_alias_file): Disable implicit locking
	for the stream.  Use _unlocked functions for glibc.

2001-11-11  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.in (dist): Avoid using hard links, because the automake-1.5
	generated toplevel 'distdir' target chmods all the distributed files.

2001-11-10  Bruno Haible  <haible@clisp.cons.org>

	* libgnuintl.h (_INTL_PARAMS): Renamed from PARAMS, to avoid polluting
	the user's namespace.
	Also test for __GNUC__, __SUNPRO_C and __PROTOTYPES because on
	64-bit Solaris, we need prototypes although __STDC__ is often defined
	to 0. __GNUC__ covers GCC, __SUNPRO_C covers Sun cc, regardless of
	compilation flags. __PROTOTYPES covers other compilers when compiling
	programs using autoconf's AC_C_PROTOTYPES.
	* gettextP.h (PARAMS): Also test for __SUNPRO_C, because 64-bit Solaris
	cc needs prototypes although it defines __STDC__ to 0 by default.
	Also test for __cplusplus and __PROTOTYPES, just for consistency with
	libgnuintl.h.
	* hash-string.h (PARAMS): Likewise.
	* loadinfo.h (PARAMS): Likewise.
	* plural-exp.h (PARAMS): Likewise.

2001-10-31  Bruno Haible  <haible@clisp.cons.org>

	* plural.y: Include <stddef.h>, needed for NULL with SunOS 4 cc.

2001-10-31  Bruno Haible  <haible@clisp.cons.org>

	* COPYING.LIB-2.0: Renamed from COPYING.LIB-2.
	* Makefile.in (DISTFILES.gettext, install-data, uninstall): Update.
	(DISTFILES.obsolete): Add COPYING.LIB-2.

2001-10-09  Bruno Haible  <haible@clisp.cons.org>

	* localcharset.c (getc): Define as getc_unlocked if available.

2001-09-27  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.in (install-strip, installdirs): New rules.

2001-09-24  Bruno Haible  <haible@clisp.cons.org>

	* localename.c: New file, integrating a function from
	Tor Lillqvist <tml@iki.fi>.
	* gettextP.h: New declaration.
	* dcigettext.c (guess_category_value): Call _nl_locale_name.
	* Makefile.in (COMSRCS): Add localename.c.